--- a/styles/globalColorMerginPadding.css
+++ b/styles/globalColorMerginPadding.css
@@ -1,19 +1,55 @@
 :root{
-    --whiteLight: #f3f3f3;
-    --whiteDark: #fff;
+    --whiteLight: #ffffff;
+    --whiteDark: #e5e2e2;
     --m10: 10px;
     --m15: 15px;
 }
 
 /* margin padding styles  */
 .m-0{margin: 0;}
+.m-1{margin: 0.15rem;}
+.m-2{margin: 0.25rem;}
+.m-3{margin: 0.35rem;}
+.m-4{margin: 0.50rem;}
+.m-5{margin: 0.75rem;}
+.m-6{margin: 0.85rem;}
+.m-7{margin: 1.0rem;}
+.m-8{margin: 1.15rem;}
+.m-9{margin: 1.25rem;}
+.m-10{margin: 1.50rem;}
 .m-auto{margin: auto;}
 
+.p-0{padding: 0;}
+.p-1{padding: 0.15rem;}
+.p-2{padding: 0.25rem;}
+.p-3{padding: 0.35rem;}
+.p-4{padding: 0.50rem;}
+.p-5{padding: 0.75rem;}
+.p-6{padding: 0.85rem;}
+.p-7{padding: 1.0rem;}
+.p-8{padding: 1.15rem;}
+.p-9{padding: 1.25rem;}
+.p-10{padding: 1.50rem;}
 .p-auto{padding: auto;}
-.p-auto{padding: auto;}
+
+
 
 
 
 /* color styles  */
 .color-primary-dark{color: var(--whiteDark);}
 .color-primary-light{color: var(--whiteLight);}
+
+/* font styles  */
+.f-1{font-size: 0.5rem;}
+.f-2{font-size: 0.75rem;}
+.f-3{font-size: 0.85rem;}
+.f-4{font-size: 1.0rem;}
+.f-5{font-size: 1.12rem;}
+.f-6{font-size: 1.25rem;}
+.f-7{font-size: 1.35rem;}
+.f-8{font-size: 1.5rem;}
+.f-9{font-size: 1.75rem;}
+.f-10{font-size: 2.0rem;}
+.f-11{font-size: 2.5rem;}
+.f-12{font-size: 3rem;}
