payment user data info stored to DB, remaining to recheck the pay amount before changing the pay status to true

--- a/client_side/components/payment/stripe/stripe.module.css
+++ b/client_side/components/payment/stripe/stripe.module.css
@@ -11,6 +11,9 @@
     min-width: 30rem;
     min-height: 18rem;
 }
+.paycard_container_wrapper span{
+  border-radius: 19px;
+}
 .paycard_container form label{
     color: white;
 }
