--- a/styles/Payment.module.css
+++ b/styles/Payment.module.css
@@ -62,3 +62,34 @@
 .a{
     color: #489248e5;
 }
+
+
+/* payment successful card style  start */
+
+.purchase_success_card{
+    width: 25rem;
+    height: 30rem;
+    border-radius: 15px;
+    /* box-shadow: inset 0 0 60px 1px rgb(70, 78, 182); */
+    background-color: rgb(56, 83, 119);
+    padding: 2rem;
+    margin: 2rem;
+}
+.purchase_card_content{
+    margin-top: 3rem;
+}
+
+.purchase_success_card button{
+    color: green;
+    font-weight: 700;
+    font-size: larger;
+    border-radius: 5px;
+    border: none;
+    background-color: skyblue;
+}
+.purchase_success_card button:hover{
+    background-color: #43a3c9;
+    color: #e7e3e3;
+    cursor: pointer;
+}
+/* payment successful card style  end*/
