--- a/client_side/components/dashboard/audioplayer.module.css
+++ b/client_side/components/dashboard/audioplayer.module.css
@@ -1,10 +1,18 @@
 .audioPlayer {
     --primary: #f40082;
     --secondary: #ffd200;
-  
+    --playing_bg: url("../../assets/backgrounds/music_player.gif");
+    
     align-items: center;
     display: flex;
-    width: 700px;
+    width: max-content;
+    margin: auto;
+    padding: 1.5rem;
+    padding-top: 2rem;
+    box-shadow: inset 0 0 10px 1px aqua;
+    border-radius: 0.3rem;
+    /* background-image: var(--playing_bg); */
+    background-size: 100% 60%;
   }
   
   .forwardBackward {
@@ -37,6 +45,8 @@
   .play {
     position: relative;
     left: 5px;
+
+    /* color: #7ae63b; */
   }
   
   .currentTime,
@@ -51,7 +61,7 @@
   
   .progressbar_wrapper{
     position: relative;
-
+    margin: auto 0.4rem;
   }
 
   .progressBar {
@@ -158,4 +168,21 @@
     transform: scale(1.2);
     background: var(--selectedKnobby);
   }
+
+  /* volume styles  */
+
+.volume{
+  /* position: absolute; */
+  writing-mode: vertical-lr;
+  -webkit-appearance: slider-vertical;
+  width: 1rem;
+  height: 4rem;
+  transform: translateY(-1.5rem);
+}
+.volume:hover{
+  
+}
+
+
+
 
