--- a/client_side/components/common/MainLayout.module.css
+++ b/client_side/components/common/MainLayout.module.css
@@ -35,3 +35,22 @@
 .active_link{
     text-decoration: underline;
 }
+
+/* footer styles  start */
+.footerContainer{
+    padding-bottom: 50px;
+    margin: auto 10%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    color: #e9d8d8;
+}
+.footerContainer div a{
+    color: #e9d8d8;
+   margin: auto 10px;
+   text-decoration: none;
+}
+.footerContainer div a:hover{
+    color: yellowgreen;
+}
+/* footer styles  end */
