--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -210,20 +210,33 @@
   background: no-repeat 100%  url("../client_side/assets/backgrounds/pro-back-bg.jpg");
   background-size: cover;
   background-position: center;
+  padding-bottom: 40px;
 }
 .hireProWrapper{
   margin: auto 10%;
   padding-top: 20px;
   padding-bottom: 20px;
 }
+.hireProDescription{
+  margin: 3rem auto;
+}
+.hireProDescription h1{
+  font-size: 3rem;
+  margin-bottom: 0;
+}
+.hireProDescription p{
+  font-size: 1.5rem;
+  margin: 0;
+}
 
 .profiles{
-  
+  display: flex;
+  justify-content: space-around;
 }
 .profile{
   border: 1px solid rgb(150, 152, 230);
   border-radius: 10px;
-  width: 250px;
+  width: 260px;
   padding: 30px 18px;
   text-align: center;
   background-color: rgb(78, 68, 170);
@@ -238,22 +251,20 @@
 .profilePosition{
   margin-top: 4px;
 }
-.profile button{
-  border: none;
-  font-weight: 700;
-  padding: 8px 15px;
+
+.profileEmail{
+  font-weight: 600;
+  width: fit-content;
+  padding: 8px 12px;
   border-radius: 3px;
   font-style: italic;
-  gap: 1rem;
+  gap: 10px;
   margin: 1rem auto;
-}
-.profile button svg{
-  /* margin-left: 1rem; */
-}
-.profile a{
+  background-color: rgb(226, 219, 219);
+  color: rgb(58, 44, 44);
   text-decoration: none;
-  color: rgb(233, 232, 231);
 }
+
 .profileIcons{
   gap: 1rem;
 }
