--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,30 +1,31 @@
-.homeContainer{
+.homeContainer {
   margin: 0;
 }
 
-.bannerContainer{
+.bannerContainer {
   width: 100%;
   height: 35rem;
-  background: no-repeat 100% url("../client_side/assets/backgrounds/home-banner-bg.jpg");
-  
+  background: no-repeat 100%
+    url("../clientSide/assets/backgrounds/home-banner-bg.jpg");
+
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   align-items: center;
   position: relative;
   margin-bottom: 15rem;
 }
-.bannerText{
+.bannerText {
   margin: 5rem;
   text-align: center;
   color: rgb(252, 253, 251);
 }
-.bannerText h1{
+.bannerText h1 {
   font-size: 2.5rem;
 }
-.bannerText p{
+.bannerText p {
   font-size: x-large;
 }
-.freeConvertContainer{
+.freeConvertContainer {
   position: absolute;
   width: 50rem;
   background-color: rgb(235, 226, 226);
@@ -37,64 +38,63 @@
   border-radius: 0.6rem;
 }
 
-.freeConvertContainer textarea{
+.freeConvertContainer textarea {
   width: 98%;
   border-radius: 0.3rem;
   padding: 0.5rem;
   min-height: 12rem;
   resize: none;
 }
-.freeConvertContainer textarea:focus{
+.freeConvertContainer textarea:focus {
   outline: 1px dashed rgb(98, 98, 139);
 }
 
 /* style text area scrollbar  start*/
 /* styel scrollbar for firefox  */
 .freeConvertContainer textarea {
-  scrollbar-width: thin;          /* "auto" or "thin" */
-  scrollbar-color: blue orange;   /* scroll thumb and track */
+  scrollbar-width: thin; /* "auto" or "thin" */
+  scrollbar-color: blue orange; /* scroll thumb and track */
 }
 
 /* for Chrome, Edge, and Safari */
 .freeConvertContainer textarea::-webkit-scrollbar {
-  width: 5px;               /* width of the entire scrollbar */
+  width: 5px; /* width of the entire scrollbar */
 }
 .freeConvertContainer textarea::-webkit-scrollbar-track {
-  background: orange;        /* color of the tracking area */
+  background: orange; /* color of the tracking area */
 }
 .freeConvertContainer textarea::-webkit-scrollbar-thumb {
-  background-color: blue;    /* color of the scroll thumb */
-  border-radius: 20px;       /* roundness of the scroll thumb */
-  border: 1px solid orange;  /* creates padding around scroll thumb */
+  background-color: blue; /* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
+  border: 1px solid orange; /* creates padding around scroll thumb */
 }
 
-
 /* style text area scrollbar  end*/
-.textareStatusMsg{
+.textareStatusMsg {
   display: grid;
   grid-template-columns: 1fr 200px;
   color: #4b4a4a;
   font-size: 14px;
 }
 
-.convertControl{
+.convertControl {
   display: grid;
   grid-template-columns: auto 1fr auto;
   justify-items: center;
 }
-.convertControl select{
+.convertControl select {
   border: none;
   border-radius: 4px;
   padding: 8px 14px;
 }
-.convertControl button{
+.convertControl button {
   border: none;
   border-radius: 4px;
   font-weight: 700;
   background-color: lightblue;
   padding: 8px 14px;
 }
-.convertControl button:hover{
+.convertControl button:hover {
   background-color: rgb(147, 205, 224);
   cursor: pointer;
   color: blue;
@@ -107,19 +107,19 @@
 }
 
 /* step card styles  start */
-.stepCardContainer{
+.stepCardContainer {
   margin: 4rem 10%;
 }
-.stepCardContainer h1{
+.stepCardContainer h1 {
   /* font-size: xx-large;
   margin: 1rem auto; */
 }
-.stepCards{
+.stepCards {
   display: grid;
-  grid-template-columns: repeat(4,1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 1rem;
 }
-.stepCard{
+.stepCard {
   /* width: 380px; */
   padding: 1rem;
   box-shadow: inset 0 0 15px 1px rgb(96, 100, 139);
@@ -128,64 +128,63 @@
 /* step card styles  end */
 
 /* supported language styles  start */
-.langContainer{
+.langContainer {
   background-color: rgb(48, 52, 105);
   padding-top: 3rem;
   padding-bottom: 5rem;
 }
-.langWrapper{
+.langWrapper {
   margin: auto 10%;
   background-color: rgb(48, 52, 105);
 }
-.langCards{
+.langCards {
   display: flex;
   flex-wrap: wrap;
 }
-.langCard{
+.langCard {
   padding: 8px 14px;
   border: none;
   border-radius: 2px;
   box-shadow: 3px 3px rgb(57, 207, 57);
   width: 200px;
-
 }
 /* supported language styles end */
 
 /* short add style start  */
-.sortSiteAdd{
+.sortSiteAdd {
   margin: 8rem 10%;
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
   align-items: center;
   height: 25rem;
 }
-.sortSiteAdd h1{
+.sortSiteAdd h1 {
   font-size: 3rem;
   text-align: center;
 }
-.sortSiteAddMedia{
+.sortSiteAddMedia {
   height: 100%;
-  background: no-repeat 100%  url("../client_side/assets/backgrounds/sort-site-add.png");
+  background: no-repeat 100%
+    url("../clientSide/assets/backgrounds/sort-site-add.png");
   background-size: contain;
   background-position: center;
   width: 100%;
-
 }
 /* short add style end */
 
 /* hints signup start */
-.hintsSignnUp{
+.hintsSignnUp {
   margin: 8rem 10%;
   flex-direction: column;
 }
-.hintsSignnUp h1{
+.hintsSignnUp h1 {
   font-size: 3rem;
   text-transform: capitalize;
   max-width: 50rem;
   margin: 2rem auto;
 }
-.hintsSignnUp a{
+.hintsSignnUp a {
   display: block;
   width: max-content;
   margin: 2rem auto;
@@ -195,45 +194,53 @@
   border: none;
   cursor: pointer;
   font-size: 20px;
-  background-image: linear-gradient(to right,rgb(42, 164, 173),rgb(66, 141, 106));
+  background-image: linear-gradient(
+    to right,
+    rgb(42, 164, 173),
+    rgb(66, 141, 106)
+  );
   color: rgb(135, 236, 76);
   text-decoration: none;
-  transition: all 0.3s ;
+  transition: all 0.3s;
 }
-.hintsSignnUp a:hover{
-  background-image: linear-gradient(to right,rgb(66, 141, 106),rgb(42, 164, 173));
-  
+.hintsSignnUp a:hover {
+  background-image: linear-gradient(
+    to right,
+    rgb(66, 141, 106),
+    rgb(42, 164, 173)
+  );
 }
 
-.hireProContainer{
+.hireProContainer {
   /* height: 20rem; */
-  background: no-repeat 100%  url("../client_side/assets/backgrounds/pro-back-bg.jpg");
+  background: no-repeat 100%
+    url("../clientSide/assets/backgrounds/pro-back-bg.jpg");
   background-size: cover;
   background-position: center;
   padding-bottom: 40px;
 }
-.hireProWrapper{
+.hireProWrapper {
   margin: auto 10%;
   padding-top: 20px;
   padding-bottom: 20px;
 }
-.hireProDescription{
+.hireProDescription {
   margin: 3rem auto;
 }
-.hireProDescription h1{
+.hireProDescription h1 {
   font-size: 3rem;
   margin-bottom: 0;
 }
-.hireProDescription p{
+.hireProDescription p {
   font-size: 1.5rem;
   margin: 0;
 }
 
-.profiles{
+.profiles {
   display: flex;
   justify-content: space-around;
 }
-.profile{
+.profile {
   border: 1px solid rgb(150, 152, 230);
   border-radius: 10px;
   width: 260px;
@@ -242,17 +249,17 @@
   background-color: rgb(78, 68, 170);
   box-shadow: inset 0 0 10px 1px rgb(16, 3, 134);
 }
-.profile img{
+.profile img {
   border-radius: 50%;
 }
-.profile h2{
+.profile h2 {
   margin-bottom: 0;
 }
-.profilePosition{
+.profilePosition {
   margin-top: 4px;
 }
 
-.profileEmail{
+.profileEmail {
   font-weight: 600;
   width: fit-content;
   padding: 8px 12px;
@@ -265,6 +272,6 @@
   text-decoration: none;
 }
 
-.profileIcons{
+.profileIcons {
   gap: 1rem;
 }
