--- a/clientSide/components/common/MainLayout.module.css
+++ b/clientSide/components/common/MainLayout.module.css
@@ -6,7 +6,7 @@
     margin: auto 10%;
 }
 .main_Layout_body_middle{
-    min-height: calc(100vh - 9rem);
+    min-height: calc(100vh - 9.7rem);
 }
 .layout_nav{
     height: max-content;
@@ -43,6 +43,7 @@
     justify-content: space-evenly;
     align-items: center;
     color: #e9d8d8;
+    white-space: nowrap;
 }
 .footerContainer div a{
     color: #e9d8d8;
@@ -53,3 +54,70 @@
     color: yellowgreen;
 }
 /* footer styles  end */
+
+
+
+
+
+/* *****RESPONSIVE STYLES START******  */
+
+@media (max-width: 576px) {
+    .main_Layout_wrapper{
+        margin: auto 5%;
+    }
+    .main_Layout_body_middle{
+        min-height: calc(100vh - 20rem);
+    }
+    .layout_nav{
+        flex-direction: column;
+        align-items: center;
+        margin: auto 0;
+        font-size: 1.2rem;
+    }
+    .layout_nav_link{
+        padding: 0.5rem 0.5rem;
+    }
+    .navScrollStyle{
+        width: calc(100vw - 2*0% - 2*2rem ); /* calculation of .layout_nav's margin & padding */ 
+        /* display: none; */ /* hide the nav when scroll in small device*/
+    }
+    .footerContainer{
+        margin: auto 5%;
+        padding-bottom: 2rem;
+        flex-direction: column;
+    }
+}
+
+@media (min-width: 577px) and (max-width: 768px) {
+    .footerContainer h1{
+        font-size: 1.14rem;
+    }
+    .footerContainer{
+        margin: auto 5%;
+        padding-bottom: 2rem;
+    }
+}
+
+@media (min-width: 769px) and (max-width: 992px) {
+    .footerContainer h1{
+        font-size: 1.5rem;
+    }
+    .footerContainer{
+        margin: auto 5%;
+        padding-bottom: 2rem;
+        
+    }
+}
+
+@media (min-width: 993px) and (max-width: 1200px) {
+    
+}
+
+@media (min-width: 1201px) and (max-width: 1400px) {
+  
+}
+
+
+/* *******RESPONSIVE STYLES END******* */
+
+
