--- a/styles/dashboard.module.css
+++ b/styles/dashboard.module.css
@@ -143,3 +143,55 @@
     cursor: pointer;
     color: #fff;
 }
+
+
+
+
+
+
+
+/* *****RESPONSIVE STYLES START******  */
+
+/* @media (max-width: 576px) { */
+@media (max-width: 992px) {
+    .card_fileInfo_container{
+        flex-direction: column-reverse;
+        
+    }
+    .user_status_card{
+        transform: rotate(0deg) skew(0deg, 0deg);
+        display: block;
+        margin: auto;
+    }
+    .textInputArea{
+        margin: 0;
+    }
+    .textInputArea textarea{
+        width: calc(100% - 5%);
+        /* font-size: 1rem; */
+    }
+  }
+  
+  @media (min-width: 577px) and (max-width: 768px) {
+    
+    
+  }
+  
+  @media (min-width: 769px) and (max-width: 992px) {
+    
+    
+  }
+  
+  @media (min-width: 993px) and (max-width: 1200px) {
+    
+    
+  }
+  
+  @media (min-width: 1201px) and (max-width: 1400px) {
+    
+  }
+  
+  
+  /* *******RESPONSIVE STYLES END******* */
+
+  
