--- a/styles/globalClasses.css
+++ b/styles/globalClasses.css
@@ -11,3 +11,39 @@
 .text-center{text-align: center;}
 .capitalize{text-transform: capitalize;}
 
+
+
+
+
+
+
+/* *****RESPONSIVE STYLES START******  */
+
+@media (max-width: 576px) {
+    
+}
+
+@media (min-width: 577px) and (max-width: 768px) {
+  
+  
+}
+
+@media (min-width: 769px) and (max-width: 992px) {
+  
+  
+}
+
+@media (min-width: 993px) and (max-width: 1200px) {
+  
+  
+}
+
+@media (min-width: 1201px) and (max-width: 1400px) {
+  
+}
+
+
+/* *******RESPONSIVE STYLES END******* */
+
+
+
